remove lavaplayer as dependency